<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize" tools:layout_editor_absoluteX="8dp"
        android:id="@+id/toolbar2" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:text="@string/agility_collectible_tracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2" android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textStyle="bold"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:id="@+id/linearLayout" android:layout_marginBottom="208dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.558"
        android:baselineAligned="false">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/minus" android:id="@+id/decrementer"
            android:layout_weight="1" android:contentDescription="@string/decrement_description"/>
        <TextView
            android:text="@string/default_int_value"
            android:layout_width="120dp"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="360dp"
            tools:layout_editor_absoluteX="144dp"
            android:id="@+id/counter_view" android:textColor="@color/White" android:textAlignment="center"
            android:textSize="30sp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/plus" android:id="@+id/incrementer"
            android:layout_weight="2" android:contentDescription="@string/collectible_description_a"/>
    </LinearLayout>
    <ImageView
        android:layout_width="209dp"
        android:layout_height="156dp"
        android:id="@+id/collectible_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:layout_marginBottom="28dp" android:contentDescription="@string/image_description"/>
    <TextView
        android:text="@string/pyramid_top_description"
        android:layout_width="289dp"
        android:layout_height="126dp"
        android:id="@+id/agility_description" android:textSize="24sp" android:textColor="@color/White"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/collectible_image"
        android:textAlignment="center" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>