<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Grey"
    android:padding="30dp">
    <RadioGroup
        android:layout_width="345dp"
        android:layout_height="0dp"
        android:orientation="horizontal" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/radioGroup">
        <RadioButton
            android:text="@string/sand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/sand_button" android:layout_weight="1"
            android:textColor="@android:color/white" android:buttonTint="@android:color/white"/>
        <RadioButton
            android:text="@string/battlestaff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/battlestaff_button" android:layout_weight="1"
            android:textColor="@android:color/white" android:buttonTint="@android:color/white"/>
        <RadioButton
            android:text="@string/essence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pure_essence_button" android:layout_weight="1"
            android:textColor="@android:color/white" android:buttonTint="@android:color/white"/>
    </RadioGroup>
    <ToggleButton
        android:text="ToggleButton"
        android:textOff="Not Collected"
        android:textOn="Collected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggle_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintHorizontal_bias="0.498"/>
</android.support.constraint.ConstraintLayout>