<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Grey"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="129dp"
        android:layout_height="254dp"
        android:background="@color/Grey"
        android:id="@+id/npc" android:scaleType="fitCenter"
        android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/npc_image_descriptor"
        android:layout_marginStart="60dp" app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:layout_width="133dp"
        android:layout_height="125dp"
        android:id="@+id/collected_image"
        app:layout_constraintTop_toTopOf="@+id/npc" app:layout_constraintBottom_toBottomOf="@+id/npc"
        app:layout_constraintVertical_bias="0.513"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
        android:contentDescription="@string/collected_image" android:scaleType="fitCenter"/>
    <TextView
        android:text="@string/default_description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/npc"
        android:id="@+id/description_text" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/entry" android:textAlignment="center"
        android:textColor="@color/White" app:autoSizeMinTextSize="20sp"/>
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/entry"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0">

        <include
            layout="@layout/collection_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </ScrollView>
</android.support.constraint.ConstraintLayout>